--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.10.81",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "flowbite-react": "^0.12.9",
     "react": "^19.1.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.14"
   },
