--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/starter-kit": "^3.7.2",
     "axios": "^1.12.2",
     "flowbite-react": "^0.12.9",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-cookie": "^8.0.1",
