--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.10.85",
     "@tailwindcss/vite": "^4.1.14",
@@ -31,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.14"
   },
